Fix slider grid gap

--- a/public/styles.css
+++ b/public/styles.css
@@ -142,6 +142,7 @@ ul, li, a, span {
 .slider {
   display: grid;
   grid-auto-flow: column;
+  grid-auto-columns: min-content;
   transition: transform 0.5s ease-in-out;
   width: 100%;
   height: 100%;
